# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/ohos_var.gni")
import("//build/test.gni")
import("//foundation/distributedhardware/distributed_audio/distributedaudio.gni")

module_out_path = "distributed_audio/services/audioclient/mic_client_test"

config("module_private_config") {
    visibility = [ ":*" ]

    include_dirs = [
        "//foundation/multimedia/audio_framework/interfaces/inner_api/native/audiocommon/include",
        "//foundation/multimedia/audio_framework/frameworks/native/common/include",
        "//foundation/multinedia/audio_framework/interfaces/inner_api/native/audiocapturer/include",
    ]

    include_dirs += [
        "${services_path}/audioclient/test/unittest/micclient/include",
        "${services_path}/audioclient/test/unittest/audioclienttestutils/include",
        "${services_path}/audiotransport/encodetransport/include",
        "${services_path}/audioclient/micclient/include",
        "${services_path}/audiotransport/encodetransport/includ",
        "${services_path}/common/audioeventcallback",
        "${common_path}/include",
        "${services_path}/common/audioparam",
        "${services_path}/common/audiodata/include",
        "${services_path}/audiotransport/audio_channel/include",
        "${services_path}/audiotransport/audiodatachannel/include",
        "${services_path}/audiotransport/encodetransport/include",
        "${services_path}/audiotransport/interface",
        "${services_path}/audioprocessor/encodeprocessor/include",
        "${services_path}/audioprocessor/interface",
        "${softbusadapter_path}/include",
        "${fwk_common_path}/utils/include",
    ]
}

## UnitTest dmic_client_test
ohos_unittest("MicClientTest") {
    module_out_path = module_out_path

    sources = [
      "//foundation/distributedhardware/distributed_audio/services/audioclient/test/unittest/micclient/src/dmic_client_test.cpp",
    ]

    configs = [ ":module_private_config" ]

    deps = [
      "//third_party/googletest:gmock",
      "//third_party/googletest:gtest_main",
      "//foundation/multimedia/audio_framework/interfaces/inner_api/native/audiocapturer:audio_capturer",
      "${services_path}/audiotransport/encodetransport:distributed_audio_encode_transport",
      "${distributedaudio_path}/common:distributed_audio_utils",
      "//foundation/distributedhardware/distributed_audio/services/audioclient/micclient:dmic_client"
    ]
}

group("mic_client_test") {
    testonly = true
    deps = [ ":MicClientTest" ]
}

