# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import(
    "//foundation/distributedhardware/distributed_audio/distributedaudio.gni")

module_out_path = "distributed_audio/control_source_test"

config("module_private_config") {
  visibility = [ ":*" ]
  include_dirs = [
        "//utils/native/base/include",
        "${fwk_common_path}/utils/include",
        "${common_path}/include",
        "include",
        "${services_path}/audiocontrol/test/unittest/audiocontrolutils/inlcude",
        "${services_path}/audiocontrol/controlsource/include",
        "${services_path}/common/audioeventcallback",
        "${services_path}/common/audioparam",
        "${services_path}/audiotransport/audioctrltransport/include",
        "${services_path}/audiotransport/audioctrltransport/interface",
        "${services_path}/audioclient/transport/include",
        "${services_path}/audiotransport/interface",
        "${services_path}/audiotransport/audio_channel/include",
        "${services_path}/common/audiodata/include",
    ]
}

## UnitTest ControlSourceTest
ohos_unittest("ControlSourceTest") {
  module_out_path = module_out_path

  sources = [
    "${services_path}/audiocontrol/test/unittest/controlsource/src/daudio_source_dev_ctrl_manager_test.cpp",
  ]

  configs = [ ":module_private_config" ]

  deps = [
    "//third_party/googletest:gmock",
    "//third_party/googletest:gtest_main",

    "//utils/native/base:utils",
    "${common_path}:distributed_audio_utils",
    "${services_path}/audiotransport/audioctrltransport:distributed_audio_ctrl_transport",
    "${services_path}/audiocontrol/controlsource:distributed_audio_source_ctrl",
  ]

  external_deps = [
    "hiviewdfx_hilog_native:libhilog",
    "multimedia_media_standard:media_client",
  ]
}

group("control_source_test") {
  testonly = true
  deps = [ ":ControlSourceTest" ]
}
