# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("//foundation/distributedhardware/distributed_audio/distributedaudio.gni")

module_out_path = "distributed_audio/source_trans_test"

config("module_private_config") {
  visibility = [ ":*" ]
  include_dirs = [
    "//third_party/json/include",
    "${fwk_common_path}/utils/include",
    "${fwk_utils_path}/include",
    "${common_path}/include",
    "./include",
    "${services_path}/common/utils/include",
    "${interfaces_path}/inner_kits/native_cpp/audio_sink/include",
  ]

}

## UnitTest AudioSinkTest
ohos_unittest("AudioSinkTest") {
  module_out_path = module_out_path

  sources = [ "${interfaces_path}/inner_kits/native_cpp/test/unittests/audiosinktest/src/daudio_sink_handler_test.cpp" ]

  configs = [ ":module_private_config" ]

  deps = [
    "${common_path}:distributed_audio_utils",
    "//foundation/communication/ipc/interfaces/innerkits/ipc_core:ipc_core",
    "//foundation/distributedhardware/distributed_audio/interfaces/inner_kits/native_cpp/audio_sink:distributed_audio_sink_sdk",
    "//foundation/distributedschedule/samgr/interfaces/innerkits/samgr_proxy:samgr_proxy",
    "//third_party/googletest:gmock",
    "//third_party/googletest:gtest_main",
    "//utils/native/base:utils",
  ]

  external_deps = [
    "dsoftbus:softbus_client",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "multimedia_media_standard:media_client",
    "safwk:system_ability_fwk",
    "samgr_standard:samgr_proxy",
  ]
}

group("audio_interface_test") {
  testonly = true
  deps = [ ":AudioSinkTest" ]
}
