# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/test.gni")
import("//drivers/hdf_core/adapter/uhdf2/uhdf.gni")

module_out_path = "distributed_audio/hdf_service/hdi_service/audio"

config("module_private_config") {
  visibility = [ ":*" ]

  include_dirs = [
    "//foundation/distributedhardware/distributed_audio/hdf_service/distributed_audio/hdi_service/audio/v1_0/test/unittest/audio_adapter_interface/include",
    "//foundation/distributedhardware/distributed_audio/hdf_service/distributed_audio/hdi_service/audio/v1_0/test/unittest/audio_test_utils",
    "//foundation/distributedhardware/distributed_audio/hdf_service/distributed_audio/hdi_service/audio_ext/v1_0/include",
    "//foundation/distributedhardware/distributed_audio/hdf_service/distributed_audio/hdi_service/audio/v1_0/include",
    "//foundation/distributedhardware/distributed_audio/hdf_service/distributed_audio/hdi_service/common/include",
    "//foundation/distributedhardware/distributed_audio/hdf_service/distributed_audio/hdi_service/common/log/include",
    "//foundation/distributedhardware/distributed_audio/hdf_service/distributed_audio/hdi_service/common/utils/include",
  ]
}

## UnitTest hdi_service_audio_test
ohos_unittest("HDIServiceAudioAdapterTest") {
  module_out_path = module_out_path

  sources = [
    "//foundation/distributedhardware/distributed_audio/hdf_service/distributed_audio/hdi_service/audio/v1_0/test/unittest/audio_adapter_interface/src/audio_adapter_interface_impl_test.cpp"
  ]

  configs = [ ":module_private_config" ]

  public_deps = [
    "//third_party/googletest:gmock",
    "//third_party/googletest:gtest_main",
    "//foundation/distributedhardware/distributed_audio/hdf_service/distributed_audio/hdi_service/audio/v1_0:libaudio_manager_daudio_primary_service_1.0",
    "//foundation/distributedhardware/distributed_audio/hdf_service/distributed_audio/hdi_service/audio/v1_0:libdaudio_primary_driver",
    "//foundation/distributedhardware/distributed_audio/hdf_service/distributed_audio/hdi_service/common:libdaudio_hdf_utils",
    "//foundation/distributedhardware/distributed_audio/hdf_interfaces/distributed_audio/audio/v1_0:libdaudio_stub_1.0",
    "//foundation/distributedhardware/distributed_audio/hdf_interfaces/distributed_audio/audioext/v1_0:libdaudioext_stub_1.0"
  ]
  external_deps = [
    "hdf_core:libhdf_host",
    "hdf_core:libhdf_utils",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_single",
    "utils_base:utils",
  ]
}

group("hdi_service_audio_adapter_test") {
  testonly = true
  deps = [ ":HDIServiceAudioAdapterTest" ]
}